Text-Overlap Fix |  Softer Background Gradient

--- a/evannicholas.dev/src/Cards.module.css
+++ b/evannicholas.dev/src/Cards.module.css
@@ -6,8 +6,9 @@
     align-items: center;
     height: 100vh; 
     width: 100vw; 
-    background-image: linear-gradient(180deg, rgb(191, 191, 191), rgb(255, 255, 255));
+    background-image: linear-gradient(180deg, rgb(218, 218, 218), rgb(255, 255, 255));
     overflow: hidden; 
+    text-overflow: ellipsis;
 }
 
 .card {
@@ -31,6 +32,7 @@
         opacity: 1;
     }
 }
+
 .arrow {
     width: 5wv;
     height: 5vh;
@@ -73,6 +75,12 @@
     font-size: 1.2rem;
 }
 
+@media (max-width: 750px) {
+    .cardTimeframe {
+        display: none;
+    }
+}
+
 .cardExample {
 
     display: flex;
@@ -106,8 +114,7 @@
 }
 
 
-
-@media (max-width: 820px) {
+@media (max-width: 600px) and (hover: none) and (pointer: coarse) {
     .card {
         width: 95vw;
         height: 70vh;
